kubernetes.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME_

  # Pod template
  template:
    metadata:
      labels:
        app: _APP_NAME_
    spec:
      containers:
      - name: _APP_NAME_
        image: _CONTAINER_IMAGE_
        volumeMounts:
        - name: media-server
          mountPath: /usr/app/public
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10

        # Environment variable to load secrets
        # See .prod-secrets.yaml uncommitted secret file
      volumes:
      - name: media-server
        persistentVolumeClaim:
          claimName: media-server-pvc

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: _APP_NAME_
  annotations:
    # MUST BE A STATIC IP RESERVED !
    kubernetes.io/ingress.global-static-ip-name: _APP_NAME_-ip
  labels:
    app: _APP_NAME_
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: _APP_NAME_
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: _APP_NAME_
    tier: web
  type: NodePort
